--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tsc"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "typescript": "^3.7.4"
   }
